Lagt til mye på homepage og stilsatt en del

--- a/Energidrikkfabrikken/Views/Home/Index.cshtml
+++ b/Energidrikkfabrikken/Views/Home/Index.cshtml
@@ -2,7 +2,71 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="home-container">
+    <div class="carousel-wrapper">
+        <button class="carousel-navigator-left">
+            <img src="svg/left-icon.svg" alt="venstre_ikon">
+        </button>
+        <div class="carousel">
+            <img src="images/carousel-img1.png" alt="energidrikkfarbikken_highlight_bilde"/>
+            <img src="images/carousel-img2.png" alt="energidrikkfarbikken_highlight_bilde"/>
+            <img src="images/carousel-img3.png" alt="energidrikkfarbikken_highlight_bilde"/>
+            <img src="images/carousel-img4.png" alt="energidrikkfarbikken_highlight_bilde"/>
+            <img src="images/carousel-img1.png" alt="energidrikkfarbikken_highlight_bilde"/>
+        </div>
+        <button class="carousel-navigator-right">
+            <img src="svg/right-icon.svg" alt="høyre_ikon">
+        </button>
+    </div>
+    <div class="mid-section">
+        <img class="energy-feature-img" src="images/energy-group.png" alt="energidrikk_trio">
+        <div class="features-wrapper">
+            <div class="feature">
+                <img src="svg/candy-icon.svg" alt="smak_ikon">
+                <h3>Original smak</h3>
+                <p>10 unike energidrikker med hver sin smak for å gjøre alt mer spennende</p>
+            </div>
+            <div class="feature">
+                <img src="svg/no-sugar-icon.svg" alt="uten_sukker_ikon">
+                <h3>100% Sukkerfri</h3>
+                <p>Våre energidrikker er helt uten sukker, og inneholder vitamin B3, B6 og B12</p>
+            </div>
+            <div class="feature">
+                <img src="svg/pulse-icon.svg" alt="puls_ikon">
+                <h3>Maks ytelse</h3>
+                <p>Med innhold av kalsium, elektrolytter og koffein vil du få maks ut av det du vil gjøre</p>
+            </div>
+        </div>
+    </div>
+    <div class="lower-section">
+        <div class="about-wrapper">
+            <h1>Vi er <br> Energidrikk-fabrikken.</h1>
+            <div class="about-and-socials-wrapper">
+                <p>
+                    Vi i Energidrikkfabrikken tar energi til nye høyder med våre eksplosive smaker og banebrytende vitenskap. 
+                    Vår dedikasjon til kvalitet og miljøbevissthet gjør oss til det beste valget for energi som både løfter deg og tar vare på planeten vår. 
+                    Klar for å erobre dagen med en enestående opplevelse? Sjekk ut våre energidrikker og bli blåst bort av vår unike energi!
+                </p>
+                <div class="socials-wrapper">
+                    <div class="social">
+                        
+                    </div>
+                    <div class="social">
+                                            
+                    </div>
+                    <div class="social">
+                                            
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="lower-section--btn">
+            Våre energidrikker
+            <img src="svg/right-icon.svg" alt="forsett_ikon"/>
+        </button>
+        <button class="lower-section--btn">
+            Kontakt oss
+            <img src="svg/right-icon.svg" alt="forsett_ikon"/>
+        </button>
+    </div>
 </div>
