--- a/Energidrikkfabrikken/wwwroot/css/site.css
+++ b/Energidrikkfabrikken/wwwroot/css/site.css
@@ -5,7 +5,7 @@
   --light-blue: #F4F9FF;
   --light-peach: #FFDCDC;
   --white: #FFFFFF;
-  --secondary-blue: #54A1F5;
+  --secondary-blue: #B6D4F4;
   
   --max-width: 1200px;
   --min-width: 300px;
@@ -15,25 +15,31 @@
 
 * {
   box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
 }
 
 html {
-  font-family: 'Inter', sans-serif;
   font-size: 1rem;
   color: var(--text-color);
   position: relative;
   min-height: 100%;
   min-width: var(--min-width);
+  background: radial-gradient(290.68% 290.68% at 50% -46.14%, #FFFFFF 0%, #227DDF 92.39%);
 }
+
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 .navbar {
+  width: 100%;
+  position: fixed;
+  top: 0;
   display: flex;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-blue);
   box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
+  z-index: 1;
 }
 
 .nav--container {
@@ -73,7 +79,7 @@ html {
 
 .nav--links {
   width: 100%;
-  background-color: var(--secondary-blue);
+  background-color: var(--white);
 }
 
 .nav--links--list {
@@ -95,7 +101,8 @@ html {
 
 .nav--links--list--item a {
   text-decoration: none;
-  color: white;
+  color: var(--text-color);
+  font-weight: 500;
 }
 
 body {
@@ -103,8 +110,8 @@ body {
 }
 
 .body-content {
+  margin: 4rem auto;
   max-width: var(--max-width);
-  margin: auto;
   padding: var(--global-padding);
 }
 
@@ -116,6 +123,7 @@ body {
 }
 
 .footer--container {
+  display: flex;
   max-width: var(--max-width);
   margin: auto;
 }
@@ -143,9 +151,9 @@ body {
     gap: 0.5em;
     padding: 0;
   }
-
-  body {
-    margin: auto;
+  
+  .body-content {
+    margin: 5rem auto;
   }
 
   .nav--links {
