--- a/Energidrikkfabrikken/Views/Shared/_Layout.cshtml
+++ b/Energidrikkfabrikken/Views/Shared/_Layout.cshtml
@@ -6,13 +6,14 @@
     <title>@ViewData["Title"] - Energidrikkfabrikken</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/home.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/Energidrikkfabrikken.styles.css" asp-append-version="true"/>
 </head>
 <body>
 <header>
-    <nav class="navbar">
+    <nav class="navbar" id="navbar">
         <div class="nav--container">
             <a class="nav--home-icon" asp-area="" asp-controller="Home" asp-action="Index">
                 <img src="svg/energidrikkfabrikken-logo.svg" alt="energidrikkfabrikken_logo"/>
