Endret mer på css på homepage, og prøvde å legge til database fra render, men må bruke localhost

--- a/Energidrikkfabrikken/Views/Home/Index.cshtml
+++ b/Energidrikkfabrikken/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="home-container">
     <div class="carousel-wrapper">
         <button class="carousel-navigator-left">
-            <img src="svg/left-icon.svg" alt="venstre_ikon">
+            <img src="svg/left-icon-white.svg" alt="venstre_ikon">
         </button>
         <div class="carousel">
             <img src="images/carousel-img1.png" alt="energidrikkfarbikken_highlight_bilde"/>
@@ -15,7 +15,7 @@
             <img src="images/carousel-img1.png" alt="energidrikkfarbikken_highlight_bilde"/>
         </div>
         <button class="carousel-navigator-right">
-            <img src="svg/right-icon.svg" alt="høyre_ikon">
+            <img src="svg/right-icon-white.svg" alt="høyre_ikon">
         </button>
     </div>
     <div class="mid-section">
@@ -48,24 +48,24 @@
                     Klar for å erobre dagen med en enestående opplevelse? Sjekk ut våre energidrikker og bli blåst bort av vår unike energi!
                 </p>
                 <div class="socials-wrapper">
-                    <div class="social">
-                        
-                    </div>
-                    <div class="social">
-                                            
-                    </div>
-                    <div class="social">
-                                            
-                    </div>
+                    <button class="social-btn">
+                        <img src="svg/twitter-icon.svg" alt="facebook_ikon"/>
+                    </button>
+                    <button class="social-btn">
+                        <img src="svg/instagram-icon.svg" alt="facebook_ikon"/>                  
+                    </button>
+                    <button class="social-btn">
+                        <img src="svg/facebook-icon.svg" alt="facebook_ikon"/>
+                    </button>
                 </div>
             </div>
         </div>
         <button class="lower-section--btn">
-            Våre energidrikker
+            <div class="lower-section--btn--title">Våre energidrikker</div>
             <img src="svg/right-icon.svg" alt="forsett_ikon"/>
         </button>
         <button class="lower-section--btn">
-            Kontakt oss
+            <div class="lower-section--btn--title">Kontakt oss</div>
             <img src="svg/right-icon.svg" alt="forsett_ikon"/>
         </button>
     </div>
