--- a/Energidrikkfabrikken/Views/Shared/_Layout.cshtml
+++ b/Energidrikkfabrikken/Views/Shared/_Layout.cshtml
@@ -24,18 +24,24 @@
             </button>
             <div class="nav--links" id="navLinks">
                 <ul class="nav--links--list">
-                    <li class="nav--links--list--item">
-                        <img src="svg/hjem-ikon.svg" alt="hjem_ikon"/>
-                        <a class="" asp-area="" asp-controller="Home" asp-action="Index">Hjem</a>
-                    </li>
-                    <li class="nav--links--list--item">
-                        <img src="svg/email-ikon.svg" alt="email_ikon"/>
-                        <a class="" asp-area="" asp-controller="Home" asp-action="Privacy">Kontakt oss</a>
-                    </li>
-                    <li class="nav--links--list--item">
-                        <img src="svg/energidrikk-ikon.svg" alt="energidrikk_ikon"/>
-                        <a class="" asp-area="" asp-controller="Home" asp-action="Privacy">Våre energidrikker</a>
-                    </li>
+                    <a asp-area="" asp-controller="Home" asp-action="Index">
+                        <li class="nav--links--list--item">
+                            <img src="svg/hjem-ikon.svg" alt="hjem_ikon"/>
+                            Hjem
+                        </li>
+                    </a>
+                    <a class="" asp-area="" asp-controller="Home" asp-action="Privacy">
+                        <li class="nav--links--list--item">
+                            <img src="svg/email-ikon.svg" alt="email_ikon"/>
+                            Kontakt oss
+                        </li>
+                    </a>
+                    <a class="" asp-area="" asp-controller="Home" asp-action="Privacy">
+                        <li class="nav--links--list--item">
+                            <img src="svg/energidrikk-ikon.svg" alt="energidrikk_ikon"/>
+                            Våre energidrikker
+                        </li>
+                    </a>
                 </ul>
             </div>
         </div>
