Lagt til info i databasen og får vist det i liste over energidrikker

--- a/Energidrikkfabrikken/Views/Shared/_Layout.cshtml
+++ b/Energidrikkfabrikken/Views/Shared/_Layout.cshtml
@@ -24,19 +24,19 @@
             </button>
             <div class="nav--links" id="navLinks">
                 <ul class="nav--links--list">
-                    <a asp-area="" asp-controller="Home" asp-action="Index">
+                    <a asp-controller="Home" asp-action="Index">
                         <li class="nav--links--list--item">
                             <img src="svg/hjem-ikon.svg" alt="hjem_ikon"/>
                             Hjem
                         </li>
                     </a>
-                    <a class="" asp-area="" asp-controller="Home" asp-action="Privacy">
+                    <a class="" asp-controller="Home" asp-action="Privacy">
                         <li class="nav--links--list--item">
                             <img src="svg/email-ikon.svg" alt="email_ikon"/>
                             Kontakt oss
                         </li>
                     </a>
-                    <a class="" asp-area="" asp-controller="Home" asp-action="Privacy">
+                    <a class="" asp-controller="EnergydrinksList" asp-action="Index">
                         <li class="nav--links--list--item">
                             <img src="svg/energidrikk-ikon.svg" alt="energidrikk_ikon"/>
                             Våre energidrikker
