Endret mye på css, og fått en produktside for hver energidrikk

--- a/Energidrikkfabrikken/Views/Home/Index.cshtml
+++ b/Energidrikkfabrikken/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Hjem";
 }
 
 <div class="home-container">
@@ -24,7 +24,7 @@
             <div class="feature">
                 <img src="svg/candy-icon.svg" alt="smak_ikon">
                 <h3>Original smak</h3>
-                <p>10 unike energidrikker med hver sin smak for å gjøre alt mer spennende</p>
+                <p>7 unike energidrikker med hver sin smak for å gjøre alt mer spennende</p>
             </div>
             <div class="feature">
                 <img src="svg/no-sugar-icon.svg" alt="uten_sukker_ikon">
