--- a/Energidrikkfabrikken/Views/Shared/_Layout.cshtml
+++ b/Energidrikkfabrikken/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/energydrinksList.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/energydrink.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/Energidrikkfabrikken.styles.css" asp-append-version="true"/>
 </head>
 <body>
@@ -31,7 +33,7 @@
                         </li>
                     </a>
                     <a class="" asp-controller="Home" asp-action="Privacy">
-                        <li class="nav--links--list--item">
+                        <li class="nav--links--list--item white-list-item">
                             <img src="svg/email-ikon.svg" alt="email_ikon"/>
                             Kontakt oss
                         </li>
