--- a/Energidrikkfabrikken/wwwroot/css/site.css
+++ b/Energidrikkfabrikken/wwwroot/css/site.css
@@ -69,7 +69,7 @@ button:hover, button:focus-visible {
 }
 
 .nav--home-icon {
-  padding: 1em
+  padding: 1em;
 }
 
 .nav--home-icon img {
@@ -79,7 +79,7 @@ button:hover, button:focus-visible {
 .nav--burger {
   position: absolute;
   right: 1em;
-  top: 1.1em;
+  top: 1.2em;
   display: none;
   background-color: transparent;
   display: flex;
@@ -100,17 +100,23 @@ button:hover, button:focus-visible {
 .nav--links--list {
   list-style-type: none;
   margin: 0;
-  padding: 0.5em 0;
+  padding: 0;
 }
 
 .nav--links--list--item {
   text-decoration: none;
   display: flex;
-  gap: 0.5em;
-  padding: 0.75em 1em;
+  gap: 0.7em;
+  padding: 1.5em 1em;
   cursor: pointer;
   font-weight: 500;
   transition: transform 500ms, filter 300ms;
+  border-top: #EDF3FA 0.1rem solid;
+  background-color: #FBFCFE;
+}
+
+.white-list-item {
+  background-color: var(--white);
 }
 
 .nav--links--list--item:hover, .nav--links--list--item:focus-visible {
@@ -134,16 +140,14 @@ body {
 }
 
 .body-content {
-  margin: 4rem auto;
+  margin: 4em auto;
   max-width: var(--max-width);
   padding: var(--global-padding);
 }
 
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  padding: var(--global-padding);
+  padding: 2em var(--global-padding);
   background-color: var(--secondary-blue);
 }
 
@@ -166,15 +170,25 @@ body {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  .body-content {
+    margin: 5em auto;
+  }
   
   .navbar {
-    padding: 0.5em 0;
+    padding: 0.3em 0;
   }
 
   .nav--links--list {
     display: flex;
     gap: 0.5em;
     padding: 0;
+  }
+
+  .nav--links--list--item {
+    background-color: transparent;
+    border: none;
+    padding: 1em;
+    gap: 0.3em;
   }
   
   .body-content {
