Kontakt skjema er laget, og det meste av styling er på plass.

--- a/Energidrikkfabrikken/Views/EnergydrinksList/Index.cshtml
+++ b/Energidrikkfabrikken/Views/EnergydrinksList/Index.cshtml
@@ -34,3 +34,5 @@
         </div>
     </div>
 </div>
+<div class="background-splash1 background-splash1-energydrinkslist"></div>
+<div class="background-splash2 background-splash2-energydrinkslist"></div>
