--- a/Energidrikkfabrikken/Views/Shared/_Layout.cshtml
+++ b/Energidrikkfabrikken/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/energydrinksList.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/energydrink.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/contact.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/Energidrikkfabrikken.styles.css" asp-append-version="true"/>
 </head>
 <body>
@@ -32,7 +33,7 @@
                             Hjem
                         </li>
                     </a>
-                    <a class="" asp-controller="Home" asp-action="Privacy">
+                    <a class="" asp-controller="Contact" asp-action="Index">
                         <li class="nav--links--list--item white-list-item">
                             <img src="svg/email-ikon.svg" alt="email_ikon"/>
                             Kontakt oss
@@ -57,7 +58,7 @@
 
 <footer class="footer">
     <div class="footer--container">
-        &copy; 2023 - Energidrikkfabrikken - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2023 - Energidrikkfabrikken
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
