--- a/Energidrikkfabrikken/wwwroot/css/energydrink.css
+++ b/Energidrikkfabrikken/wwwroot/css/energydrink.css
@@ -1,4 +1,7 @@
+@import "site.css";
+
 .back-btn {
+    animation: 0.1s noDisplay, 0.5s ease-in-out fadeInFromBottom 0.1s;
     border: none;
     background-color: var(--secondary-color);
     color: white;
@@ -13,6 +16,7 @@
 }
 
 .energy-background-wrapper {
+    animation: 0.5s ease-in-out fadeIn reverse;
     position: absolute;
     max-width: 100vw;
     max-height: 100vh;
@@ -78,6 +82,7 @@
 }
 
 .energydrink-about--back-wrapper {
+    animation: 0.1s noDisplay, 0.5s ease-in-out fadeInFromBottom 0.1s;
     width: 100%;
     background-color: var(--light-blue);
     padding: 2em 1em;
@@ -87,12 +92,14 @@
 }
 
 .energydrink-title {
+    animation: 0.2s noDisplay, 0.5s ease-in-out fadeInFromBottom 0.2s;
     font-size: 2.6rem;
     margin: 0;
     font-weight: 600;
 }
 
 .energydrink-highlights-wrapper {
+    animation: 0.3s noDisplay, 0.5s ease-in-out fadeInFromBottom 0.3s;
     display: flex;
     gap: 1em;
     flex-wrap: wrap;
@@ -112,6 +119,7 @@
 }
 
 .energydrink-info-wrapper {
+    animation: 0.4s noDisplay, 0.5s ease-in-out fadeInFromBottom 0.4s;
     background-color: var(--text-color);
     color: var(--white);
     padding: 1.5em 1em;
@@ -129,10 +137,12 @@
 }
 
 .energydrink-nutrition-table--title {
+    animation: 0.4s noDisplay, 0.5s ease-in-out fadeInFromBottom 0.4s;
     margin: 0 0 -0.5em 0;
 }
 
 .energydrink-nutrition-table {
+    animation: 0.4s noDisplay, 0.5s ease-in-out fadeInFromBottom 0.4s;
     background-color: var(--white);
     border-radius: 0.3rem;
     border-spacing:0;
@@ -156,6 +166,7 @@
 }
 
 .energydrink-img-wrapper {
+    animation: 0.2s noDisplay, 0.5s ease-in-out fadeInFromBottom 0.2s;
     width: 100%;
     display: flex;
     justify-content: center;
