--- a/Energidrikkfabrikken/wwwroot/css/home.css
+++ b/Energidrikkfabrikken/wwwroot/css/home.css
@@ -13,6 +13,7 @@
 }
 
 .carousel {
+    animation: 0.5s ease-in-out fadeInFromBottom;
     display: flex;
     gap: 2%;
 }
@@ -36,6 +37,7 @@
     background: rgba(244, 249, 255, 0.16);
     border: none;
     border-radius: 50%;
+    z-index: 2;
 }
 
 .carousel-navigator-left img, .carousel-navigator-right img {
@@ -58,6 +60,7 @@
 }
 
 .energy-feature-img {
+    animation: 0.1s noDisplay, 0.5s ease-in-out fadeInFromBottom 0.1s;
     margin: auto;
     max-width: 28rem;
     width: 100%;
@@ -73,6 +76,7 @@
 }
 
 .feature {
+    animation: 0.2s noDisplay, 0.5s ease-in-out fadeInFromBottom 0.2s;
     background-color: var(--light-blue);
     padding: 1.3em 1.8em;
     margin-left: 2.8em;
@@ -108,6 +112,7 @@
 }
 
 .about-wrapper {
+    animation: 0.3s noDisplay, 0.5s ease-in-out fadeInFromBottom 0.3s;
     display: flex;
     flex-direction: column;
     background-color: var(--light-blue);
@@ -150,6 +155,7 @@
 }
 
 .lower-section--btn {
+    animation: 0.4s noDisplay, 0.5s ease-in-out fadeInFromBottom 0.4s;
     background-color: var(--secondary-color);
     color: var(--text-color);
     border: none;
@@ -221,7 +227,7 @@
             "left btn2";
         gap: 2%;
         row-gap: 1.75em;
-        margin: 8em 0;
+        margin: 8em 0 0 0;
     }
     
     .about-wrapper {
