--- a/Energidrikkfabrikken/wwwroot/css/contact.css
+++ b/Energidrikkfabrikken/wwwroot/css/contact.css
@@ -97,6 +97,12 @@
     border: #EBEFF4 solid 0.175rem;
 }
 
+.contact--form--grid--input:focus {
+    border: #D1E0F2 solid 0.175rem;
+    background-color: #FFF9F9;
+    outline: none;
+}
+
 .contact--form--grid--input::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
